--- a/adminLogin/templates/admin-sign-up.html
+++ b/adminLogin/templates/admin-sign-up.html
@@ -141,7 +141,7 @@
         <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
           <div class="card z-index-0">
             <div class="card-header text-center pt-4">
-              <h5>Register with</h5>
+              <h5>Admin - Registration</h5>
             </div>
             <div class="card-body">
               <form role="form" action="/sign-up/" method="POST">
