--- a/adminLogin/templates/admin-sign-in.html
+++ b/adminLogin/templates/admin-sign-in.html
@@ -156,7 +156,7 @@
                     </div>
                   </div>
                   <div class="card-body">
-                    <form role="form" action="/" method="POST">
+                    <form role="form" action="/admin-signin/" method="POST">
                       {% csrf_token %}
                       <div class="mb-3">
                         <input type="email" name="email" id="userEmail"
