--- a/adminLogin/templates/admin-sign-up.html
+++ b/adminLogin/templates/admin-sign-up.html
@@ -147,7 +147,7 @@
               <h5>Admin - Registration</h5>
             </div>
             <div class="card-body">
-              <form role="form" action="/sign-up/" method="POST">
+              <form role="form" action="/admin-signup/" method="POST">
                 {% csrf_token %}
                 <div class="row">
                   <div class="col-md-4">
