--- a/adminLogin/templates/admin-sign-up.html
+++ b/adminLogin/templates/admin-sign-up.html
@@ -186,7 +186,7 @@
                   </div>
                   <div class="col-md-4">
                     <div class="mb-3">
-                      <input type="text" id="hos" name="hos" class="form-control" placeholder="Hospital Name"
+                      <input type="text" id="hos" name="hosName" class="form-control" placeholder="Hospital Name"
                         aria-label="Name">
                     </div>
                     <div class="mb-3">
