--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -178,8 +178,7 @@
                       {{requestCount}}
                     </h5>
                     <p class="mb-0">
-                      <span class="text-success text-sm font-weight-bolder">+3%</span>
-                      since last week
+                      request sent for blood
                     </p>
                   </div>
                 </div>
@@ -255,7 +254,7 @@
               <h6 class="text-capitalize">Blood Unit Used</h6>
               <p class="text-sm mb-0">
                 <i class="fa fa-arrow-up text-success"></i>
-                <span class="font-weight-bold">4% more</span> in 2021
+                <span class="font-weight-bold"></span> in <script>document.write(new Date().getFullYear())</script>
               </p>
             </div>
             <div class="card-body p-3">
